<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="k00364744.helloworld.tamuk.edu.sharedpreferences.MainActivity">

    <TextView
        android:text="@string/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    />

    <TextView
        android:text="@string/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    />

    <CheckBox
        android:id="@+id/checkbox1"
        android:text="@string/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <CheckBox
        android:id="@+id/checkbox2"
        android:text="@string/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <CheckBox
        android:id="@+id/checkbox3"
        android:text="@string/checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />
    <CheckBox
        android:id="@+id/checkbox4"
        android:text="@string/checkbox4"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:checked="false" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    />

    <EditText
        android:id="@+id/editText1"
        android:text="@string/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    />

</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:text="@string/button1"
        android:onClick="saveValue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exitButton"
        android:text="@string/button2"
        android:onClick="exitApp"   />

</LinearLayout>
